# steeproute

./: .copier-answers.yml  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.benchmarks/Windows-CPython-3.13-64bit/: 0001_070debf5242836d727174a094e54d26277c0d50a_20260703_141619_uncommited-changes.json  0002_f2671d19ee627ad75bb4ff45d94ad4ce6b0fc374_20260703_210038_uncommited-changes.json  0003_b0e85dd59959499d42e323aca55ead31a3abf8d1_20260703_212551_uncommited-changes.json  0004_cdd284a0bc1dfda24bde8a7e6eedc925d271f7c5_20260704_092622_uncommited-changes.json  0005_12c693a764a31d25f7a62e4c91eae83395fe6d28_20260704_101321_uncommited-changes.json  0006_4581406c0807b9f001731fce7222478e6b68679a_20260706_134200_uncommited-changes.json  0007_4581406c0807b9f001731fce7222478e6b68679a_20260706_134617_uncommited-changes.json  0008_e13a3b175d2595d639ab438f0e6cb3aa4b901967_20260706_161545_uncommited-changes.json  0009_e13a3b175d2595d639ab438f0e6cb3aa4b901967_20260706_195912_uncommited-changes.json
.claude/: launch.json
.github/workflows/: ci.yml
_bmad-output/brainstorming/: brainstorming-session-2026-04-17-1047.md  brainstorming-session-2026-07-14-1437.md
_bmad-output/implementation-artifacts/: 1-1-scaffold-project-via-simple-modern-uv-copier-template.md  1-2-establish-steeproute-package-structure-and-entry-points.md  1-3-customize-ci-workflow-and-establish-three-layer-test-structure.md  1-4-implement-shared-error-hierarchy-and-run-entry-point-wrapper.md  1-5-define-full-click-option-decorator-surface-for-both-clis.md  1-6-validate-area-specification-at-cli-boundary.md  1-7-write-cli-smoke-tests-covering-help-version-and-exit-code-paths.md  10-1-junction-start-constraint.md  10-2-direction-aware-descent-slope-cap.md  11-1-setup-stage-timing-seams-and-progress-reporting.md  11-2-profile-solver-and-setup-pipeline-into-a-ranked-bottleneck-list.md  11-3-dedicated-benchmark-suite-pinning-pre-optimization-baselines.md  12-1-precompute-static-per-node-adjacency-for-rcl-construction.md  12-2-incremental-theta-prefix-metrics-and-cached-distinctness-sets.md  12-3-batched-rng-draws-with-documented-golden-rebake.md  12-4-re-profile-benchmark-reconciliation-and-phase-4-decision.md  13-1-vectorize-query-side-elevation-smoothing.md  13-2-faster-cache-entry-deserialization.md  13-3-query-side-recompute-avoidance-second-tier-cache-decision.md  14-1-vectorize-elevation-sampling.md  14-2-vectorize-and-de-churn-pipeline-loops.md  14-3-parallelize-dem-tile-fetch.md  14-4-parallel-grasp-restarts.md  14-5-reduce-osmnx-ingestion-cpu-cheap-levers.md  2-1-implement-pipeline-stages-1-2-osm-ingestion-trail-filtering-and-commit-real-osm-test-fixture.md  2-10-implement-query-side-fail-fast-on-unprepared-area.md  2-2-implement-pipeline-stages-3-4-2d-polyline-smoothing-and-resampling.md  2-3-implement-pipeline-stage-5-dem-elevation-sampling-and-commit-real-dem-test-fixture.md  2-4-implement-pipeline-stages-6-7-elevation-smoothing-and-per-edge-metrics.md  2-5-implement-pipeline-orchestrator-and-integration-test-stages-1-7-end-to-end-on-real-fixture.md  2-6-implement-cache-key-hashing-manifest-schema-and-provenance-helpers.md  2-7-implement-atomic-cache-write-read-and-index-maintenance.md  2-8-wire-steeproute-setup-end-to-end-with-force-refresh-semantics-on-real-fixture.md  2-9-handle-source-unavailable-errors-and-emit-osm-age-warnings.md  3-1-core-query-side-data-models.md  3-10-html-json-output-rendering-with-vendored-assets.md  3-11-wire-query-cli-end-to-end-with-validation-driven-exit-code.md  3-2-pipeline-stage-8-climb-detection.md  3-3-pipeline-stage-9-contracted-climb-graph-construction.md  3-4-topntracker-with-jaccard-distinctness.md  (+48 more)
_bmad-output/planning-artifacts/: architecture-app.md  architecture.md  correct-course-brief-2026-06-05-route-discovery.md  epics-app.md  epics.md  future-ideas.md  implementation-readiness-report-2026-04-22.md  implementation-readiness-report-2026-04-24.md  prd.md  sprint-change-proposal-2026-06-03-undirected-segment-reuse.md  sprint-change-proposal-2026-06-03.md  sprint-change-proposal-2026-06-07-route-discovery.md  sprint-change-proposal-2026-06-18-route-discovery-quality.md  sprint-change-proposal-2026-06-25-junction-start-and-descent-cap.md  sprint-change-proposal-2026-07-03-solver-optimization.md  sprint-change-proposal-2026-07-04-epic-13-story-swap.md  sprint-change-proposal-2026-07-04-query-side-performance.md  sprint-change-proposal-2026-07-06-setup-solver-scaling.md  sprint-change-proposal-2026-07-17-app-ux-improvements.md  sprint-change-proposal-2026-07-24-ownership-oriented-performance.md  sprint-change-proposal-2026-07-24-rotated-rectangle-areas.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
devtools/: gallery_capture.py
docs/: development.md
docs/examples/: README.md
src/steeproute/: __init__.py  cache.py  errors.py  models.py  output.py  progress.py  provenance.py  regression.py  validator.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_parallel_speedup.py  test_setup_stages.py  test_solver_throughput.py
tests/e2e/: conftest.py  test_cli_smoke.py  test_coverage_check.py  test_degradation.py  test_descent_cap.py  test_gallery_self_contained.py  test_interrupt.py  test_interrupt_in_process.py  test_journey_1_happy_path.py  test_junction_start.py  test_parallel_workers.py  test_pinned_regressions.py  test_progress_cli.py  test_query_stage_progress.py  test_quiet_suppresses_progress.py  test_readme_references_gallery.py  test_run_summary.py  test_seeded_reproducibility.py  test_source_unavailable.py  test_steeproute_setup.py  test_validation_failure_path.py
tests/integration/: conftest.py  exhaustive_oracle.py  test_app_api.py  test_app_sse.py  test_cache_atomic.py  test_cache_coverage.py  test_cache_roundtrip.py  test_climb_detection_fixture.py  test_dem_live.py  test_elevation_consistency.py  test_graph_contraction_fixture.py  test_grasp_descent_cap.py  test_grasp_junction_start.py  test_grasp_on_fixture.py  test_grasp_reproducible.py  (+13 more)
(+152 files in other folders)
