# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/yfontana/steeproute"
# Homepage = "https://..."
# Documentation = "https://..."

[project]
name = "steeproute"
description = "Trail route optimization tool targeting the Grenoble Alps"
authors = [
    { name="Yann Fontana", email="yann.fontana@hardis-group.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<4.0"
dynamic = ["version"]

# https://pypi.org/classifiers/
# Adjust as needed:
classifiers = [
    # Adjust as needed:
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    # Include this to avoid accidentally publishing to PyPI:
    # "Private :: Do Not Upload",
]


# ---- Main dependencies ----

dependencies = [
    "click>=8,<9",
    "osmnx>=2.0,<3",
    "networkx>=3.4,<4",
    "shapely>=2.0,<3",
    "rasterio>=1.4,<2",
    "platformdirs>=4,<5",
    # `requests` is imported directly in `pipeline/osm.py` to catch the
    # `requests.exceptions.RequestException` family from osmnx's HTTP backend
    # (Story 2.9 source-unavailable mapping). osmnx 2.x depends on `requests`
    # transitively, but a direct dep guards against a future osmnx release
    # that swaps in `httpx` / `urllib3` and breaks the transitive guarantee.
    "requests>=2,<3",
    # Jinja2 renders the per-route HTML report (`output.py` + `templates/route.html.j2`,
    # Story 3.10 / Architecture §Cat 9). The vendored Leaflet + Chart.js assets are
    # inlined into the template, so Jinja2 is the only runtime templating dependency.
    "jinja2>=3,<4",
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.1",
    "codespell>=2.4.1",
    "rich>=14.3.2",
    "basedpyright>=1.38.0",
    "funlog>=0.2.1",
    "truststore>=0.10.4",
    "hypothesis>=6.0",
]

[project.scripts]
# Add script entry points here:
steeproute = "steeproute.cli.query:main"
steeproute-setup = "steeproute.cli.setup:main"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/steeproute"]


# ---- Settings ----

[tool.ruff]
# Set as desired, typically 88 (black standard) or 100 (wide).
line-length = 100
# Ruff's default exclude covers .git, .venv, dist, etc. but not these
# project-specific non-source dirs:
#   .claude/        — Claude Code config + skills (Python files inside, not ours)
#   _bmad/          — BMAD workflow state
#   _bmad-output/   — planning artifacts (markdown only, defensive)
extend-exclude = [".claude", "_bmad", "_bmad-output"]

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    # Other possibilities:
    # "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    # "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim

]
ignore = [
    # Disable some rules that are overly pedantic. Add/remove as desired:
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.basedpyright]
# BasedPyright currently seems like the best type checker option, much faster
# than mypy and with a good extension for VSCode/Cursor.
# https://marketplace.visualstudio.com/items?itemName=detachhead.basedpyright
# https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
include = ["src", "tests", "devtools"]
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
# How many you enable is up to you. The first few are off by default, but you can
# comment/uncomment these as desired:
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false
# reportPrivateImportUsage = false
# reportPrivateLocalImportUsage = false
# reportMissingImports = false
# reportUnnecessaryIsInstance = false
# reportUnknownVariableType = false
# reportUnknownArgumentType = false
# Note: networkx + osmnx have partial / no type stubs, which fires the five
# `reportUnknown*` and `reportMissingTypeArgument` rules in any file that
# touches them. We scope the relaxation per-file (header pragma in
# pipeline/osm.py + tests/unit/test_osm.py + tests/integration/test_osm_live.py)
# rather than globally, so the strictness is preserved everywhere else.

[tool.codespell]
# Add here as needed:
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "tests",
]
norecursedirs = [
    "_bmad",
    "_bmad-output",
    ".claude",
    ".venv",
    ".git",
    "node_modules",
    "dist",
    ".pytest_cache",
    "__pycache__",
    ".hypothesis",
]
filterwarnings = []
markers = [
    "live: tests that hit external services; skipped in default CI (run with `uv run pytest -m live`)",
]
# Default collection excludes live-marked tests so CI stays offline. Override
# locally with `uv run pytest -m live` to run only the live tests, or
# `uv run pytest -m ""` to run everything including live.
addopts = ["-m", "not live"]

[tool.coverage.run]
source = ["src/steeproute"]

[tool.coverage.report]
fail_under = 0
